--- a/www/css/custom.css
+++ b/www/css/custom.css
@@ -199,24 +199,24 @@ body {
     }
 
 
-    /* Map */
+     /* Map */
     .div8 {
-        grid-column: 1 / span 4;
+        grid-column: 7 / span 8;
         grid-row: 4;
         min-height: 320px;
     }
 
     /* Regional Sales Distribution */
     .div9 {
-        grid-column: 5 / span 3;
-        grid-row: 4;
+        grid-column: 1 / span 6;
+        grid-row: 4 / span 2;
         min-height: 320px;
     }
 
     /* Sales Trend */
     .div10 {
-        grid-column: 8 / span 5;
-        grid-row: 4;
+        grid-column: 7 / span 8;
+        grid-row: 5;
         min-height: 320px;
     }
 }
